--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       const password = document.getElementById('password').value;
 
       try {
-        const response = await fetch('https://yourserver.com/api/login', { // Replace with your real endpoint
+        const response = await fetch('https://maxmediagh.github.io/tech_hub_form//api/login', { // Replace with your real endpoint
           method: 'POST',
           headers: {
             'Content-Type': 'application/json'
